# arcise

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
arcise/dialects/: CMakeLists.txt
arcise/dialects/arrow/: ArrowDialect.cpp  ArrowDialect.h  ArrowOps.cpp  ArrowOps.h  ArrowTypes.cpp  CMakeLists.txt
arcise/dialects/arrow/passes/: LowerToAffinePass.cpp  LowerToLLVMPass.cpp  MoveAllocationsOnTopPass.cpp  Passes.h
arcise/dialects/arrow/runtime/: runtime_functions.cpp
arcise/dialects/arrow/tablegen/: ArrowOps.td
arcise/dialects/arrow/transforms/: SimplifyArrayMaterialization.cpp  SimplifyArrayMaterialization.h
arcise/dialects/relalg/: CMakeLists.txt  RelalgDialect.cpp  RelalgDialect.h  RelalgOps.cpp  RelalgOps.h  RelalgTypes.cpp
arcise/dialects/relalg/dialect/: CMakeLists.txt  RelalgDialect.cpp  RelalgDialect.h  RelalgOps.cpp  RelalgOps.h  RelalgTypes.cpp  RelalgTypes.h
arcise/dialects/relalg/dialect/tablegen/: CMakeLists.txt  RelalgBaseOps.td  RelalgDialect.td  RelalgFilterOps.td  RelalgOps.td
arcise/dialects/relalg/frontends/sql/: AST.cpp  AST.h  CMakeLists.txt  Parser.cpp  Parser.h  SQLToMLIRConverter.cpp  SQLToMLIRConverter.h  main.cpp
arcise/dialects/relalg/passes/: LowerToArrowPass.cpp  Passes.h
arcise/interfaces/: Schema.h
arcise/tools/opt/: main.cpp
arcise/tools/printer/: main.cpp
src/: CMakeLists.txt
src/dialects/: CMakeLists.txt
src/dialects/arrow/: ArrowDialect.cpp  ArrowDialect.h  ArrowDialect.td  ArrowOps.cpp  ArrowOps.h  ArrowOps.td  ArrowTypes.cpp  ArrowTypes.h  CMakeLists.txt
src/dialects/arrow/passes/: LowerToAffinePass.cpp  LowerToLLVMPass.cpp  Passes.h  SplitColumnarOpsPass.cpp
src/dialects/arrow/tablegen/: ArrowDialect.td  ArrowOps.td  CMakeLists.txt
src/dialects/arrow/transforms/: SimplifyArrayMaterialization.cpp  SimplifyArrayMaterialization.h  SimplifyRedundantWrapping.h
src/dialects/relalg/: CMakeLists.txt  RelalgDialect.cpp  RelalgDialect.h  RelalgOps.cpp  RelalgOps.h  RelalgTypes.cpp  RelalgTypes.h
src/dialects/relalg/passes/: LowerToArrowPass.cpp  LowerToLLVMPass.cpp  MoveAllocationsOnTopPass.cpp  Passes.h
src/dialects/relalg/tablegen/: CMakeLists.txt  RelalgDialect.td  RelalgOps.td
src/frontends/: CMakeLists.txt
src/frontends/sql/: CMakeLists.txt  main.cpp  sql_parser.cpp  sql_parser.h
src/tools/: CMakeLists.txt
src/tools/opt/: CMakeLists.txt  main.cpp
src/tools/printer/: CMakeLists.txt  main.cpp
